@@ -35,6 +35,8 @@ https://github.com/elastic/beats/compare/v5.3.0...master[Check the HEAD diff]
 
 *Metricbeat*
 
+- Avoid errors when some Apache status fields are missing. {issue}3074[3074]
+
 *Packetbeat*
 
 *Winlogbeat*
